add：支持添加组用户
